# VCubeTracker

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  GoogleTest.cmake  NOTICE.txt  README.md  bootstrap.sh  format.sh  test.sh
calibrate_marker/: CMakeLists.txt  MarkerCalibrator.cpp  MarkerCalibrator.h  calibrate_marker.cpp
calibration/: CMakeLists.txt  calibrate_camera_charuco.cpp
common/: ArUcoBoard.cpp  ArUcoBoard.h  CMakeLists.txt  CameraCapture.cpp  CameraCapture.h  CameraCaptureBase.h  HighguiCapture.cpp  HighguiCapture.h  LowPassFilter.cpp  LowPassFilter.h  MarkerCube.cpp  MarkerCube.h  common.h  concurrent_queue.h  geometry.cpp  geometry.h  tracker.cpp  tracker.h
create_marker/: CMakeLists.txt  create_marker.cpp
cv_samples/: CMakeLists.txt  pnp.cpp
docs/: Build.md  Setup.md
scripts/: calibrate_camera.sh  create_markers.sh
test/: CMakeLists.txt  LowPassFilter_test.cpp  MarkerCube_test.cpp  affine_test.cpp  eigen_test.cpp  gtest_sample.cpp  tracker_test.cpp
vcube_tracker/: CMakeLists.txt  ThreadPool.h  fake_tracker.cpp  fake_tracker.h  openvr_util.cpp  openvr_util.h  vcube_tracker.cpp
vmt_samples/: CMakeLists.txt  vmt_send.cpp
